finish to set timer

--- a/双鱼林vb.net图书管理系统/app.config
+++ b/双鱼林vb.net图书管理系统/app.config
@@ -3,7 +3,7 @@
   
   <appSettings>
     <!--数据库联接字符串-->
-    <add key="strCon" value="server=.\SQLEXPRESS;database=BookSystemDB;user=sa;pwd=morrowsoft" />
+    <add key="strCon" value="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=E:\Membership system\Membership\数据库\BookSystemDB.mdf;Integrated Security=True;Connect Timeout=30" />
     <add key="image" value="Wave.ssk" />
     <!--显示登录界面标题-->
     <add key="title" value="图书管理系统登陆" />
