--- a/BLL/BLL.vbproj
+++ b/BLL/BLL.vbproj
@@ -69,6 +69,8 @@
     <Compile Include="bllBook.vb" />
     <Compile Include="bllBookType.vb" />
     <Compile Include="BU_UserInfo.vb" />
+    <Compile Include="getToken.vb" />
+    <Compile Include="getTokenFromStorage.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -84,6 +86,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="postData.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
