--- a/双鱼林vb.net图书管理系统/双鱼林vb.net图书管理系统.vbproj
+++ b/双鱼林vb.net图书管理系统/双鱼林vb.net图书管理系统.vbproj
@@ -99,6 +99,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common.vb" />
+    <Compile Include="membership.Designer.vb">
+      <DependentUpon>membership.vb</DependentUpon>
+    </Compile>
+    <Compile Include="membership.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="FrmAddBook.Designer.vb">
       <DependentUpon>FrmAddBook.vb</DependentUpon>
     </Compile>
@@ -208,6 +214,9 @@
     <Compile Include="Program.vb" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="membership.resx">
+      <DependentUpon>membership.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmAddBook.resx">
       <DependentUpon>FrmAddBook.vb</DependentUpon>
     </EmbeddedResource>
