--- a/DAL/app.config
+++ b/DAL/app.config
@@ -31,11 +31,11 @@
             <!--<add name="EventLog" type="System.Diagnostics.EventLogTraceListener" initializeData="APPLICATION_NAME"/> -->
         </sharedListeners>
     </system.diagnostics>
-    <userSettings>
+    <!--<userSettings>
         <DAL.My.MySettings>
             <setting name="Setting" serializeAs="String">
                 <value>user</value>
             </setting>
         </DAL.My.MySettings>
-    </userSettings>
+    </userSettings>-->
 </configuration>
