--- a/双鱼林vb.net图书管理系统/app.config
+++ b/双鱼林vb.net图书管理系统/app.config
@@ -6,13 +6,13 @@
     <add key="strCon" value="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=E:\Membership system\Membership\数据库\BookSystemDB.mdf;Integrated Security=True;Connect Timeout=30" />
     <add key="image" value="Wave.ssk" />
     <!--显示登录界面标题-->
-    <add key="title" value="图书管理系统登陆" />
+    <add key="title" value="会员系统登陆" />
     <!--显示登录界面版本标题-->
-    <add key="version" value="双鱼林vb.net图书系统v1.0" />
+    <add key="version" value="会员系统v1.0" />
     <!--显示关于界面图片显示-->
     <add key="AboutImage" value="01.jpg" />
     <!--是否显示登录界面密码找回按钮(0:隐藏 1:显示)-->
-    <add key="ButtonShow" value="1" />
+    <add key="ButtonShow" value="0" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings> 
    
