--- a/Model/Model.vbproj
+++ b/Model/Model.vbproj
@@ -93,6 +93,7 @@
     <Compile Include="Card.vb" />
     <Compile Include="CardInfo.vb" />
     <Compile Include="customerField1.vb" />
+    <Compile Include="customerField2.vb" />
     <Compile Include="level.vb" />
     <Compile Include="memberCard.vb" />
     <Compile Include="MP_PasswordType.vb" />
@@ -112,12 +113,15 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="P_PasswordType.vb" />
     <Compile Include="Store.vb" />
     <Compile Include="Token.vb" />
-    <Compile Include="Trans.vb" />
     <Compile Include="Transaction.vb" />
+    <Compile Include="Trans_purchase.vb" />
+    <Compile Include="Trans_TopUp.vb" />
+    <Compile Include="Type.vb" />
     <Compile Include="User.vb" />
-    <Compile Include="Worker.vb" />
+    <Compile Include="U_UserInfo.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
@@ -128,7 +132,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.Config" />
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
