--- a/双鱼林vb.net图书管理系统/app.config
+++ b/双鱼林vb.net图书管理系统/app.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
   <appSettings>
     <!--数据库联接字符串-->
     <add key="strCon" value="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=E:\Membership system\Membership\数据库\BookSystemDB.mdf;Integrated Security=True;Connect Timeout=30" />
@@ -14,6 +17,14 @@
     <!--是否显示登录界面密码找回按钮(0:隐藏 1:显示)-->
     <add key="ButtonShow" value="0" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
-  </appSettings> 
-   
+  </appSettings>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
+  <connectionStrings>
+    <add name="Transaction" connectionString="data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=&quot;E:\Membership system\Membership\数据库\BookSystemDB.mdf&quot;;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
