add function: rules

--- a/双鱼林vb.net图书管理系统/app.config
+++ b/双鱼林vb.net图书管理系统/app.config
@@ -17,6 +17,12 @@
     <!--是否显示登录界面密码找回按钮(0:隐藏 1:显示)-->
     <add key="ButtonShow" value="0" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
+    <add key="nLevel" value="50" />
+    <add key="mLevel" value="100" />
+    <add key="tLevel" value="150" />
+    <add key="nDis" value="9" />
+    <add key="mDis" value="8" />
+    <add key="tDis" value="7" />
   </appSettings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
