with money shows with card

--- a/Model/App.config
+++ b/Model/App.config
@@ -21,6 +21,6 @@
     </sharedListeners>
   </system.diagnostics>
   <connectionStrings>
-    <add name="Transaction" connectionString="data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=&quot;E:\Membership system\Membership\数据库\BookSystemDB.mdf&quot;;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="Transaction" connectionString="data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\BookSystemDB.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
