--- a/双鱼林vb.net图书管理系统/app.config
+++ b/双鱼林vb.net图书管理系统/app.config
@@ -6,7 +6,6 @@
   </configSections>
   <appSettings>
     <!--数据库联接字符串-->
-    <add key="strCon" value="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=E:\Membership system\Membership\数据库\BookSystemDB.mdf;Integrated Security=True;Connect Timeout=30" />
     <add key="image" value="Wave.ssk" />
     <!--显示登录界面标题-->
     <add key="title" value="会员系统登陆" />
@@ -31,6 +30,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="Transaction" connectionString="data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=&quot;E:\Membership system\Membership\数据库\BookSystemDB.mdf&quot;;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+      <!--<add name="Transaction" connectionString="data source=(LocalDB)\v12.0;attachdbfilename=|DataDirectory|\BookSystemDB.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
+  <add name="Transaction" connectionString="data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\BookSystemDB.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
